fix select input overflow on settings page

--- a/css/forms.less
+++ b/css/forms.less
@@ -116,6 +116,9 @@
   }
   .half-column {
     .make-sm-column(6);
+    select {
+      max-width: 100%;
+    }
   }
   .third-column {
     .make-sm-column(4);
